# vimgyor

./: CHANGELOG.md  Cargo.toml  README.md
docs/: keyboard_shortcuts.md
markdowns/: research.md  research_works.md  todo.md
samples/: sample_image_colored_output.txt  sample_image_raw_output.txt
src/: cleanup.rs  editor_processor.rs  error_handler.rs  image_processor.rs  input_processor.rs  main.rs
src/editor_processor/: cursor_controller.rs  editor.rs  editor_buffer.rs  editor_contents.rs  editor_modes.rs
src/image_processor/: image_editor.rs  image_reader.rs  image_utils.rs  image_writer.rs
src/input_processor/: args_parser.rs  keypress_handler.rs
